@@ -131,7 +131,9 @@ typedef union
 
 #if defined(__IEEE_BIG_ENDIAN) || defined(__IEEE_LITTLE_ENDIAN)
 
-double DEFUN(copysign, (x, y), double x AND double y)
+double
+copysign (x, y)
+     double x, y;
 {
   __ieee_double_shape_type a,b;
   b.value = y;  
@@ -142,7 +144,9 @@ double DEFUN(copysign, (x, y), double x AND double y)
 
 #else
 
-double DEFUN(copysign, (x, y), double x AND double y)
+double
+copysign (x, y)
+     double x, y;
 {
   if ((x < 0 && y > 0) || (x > 0 && y < 0))
     return -x;
